# continuous_integration

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  test.py
distributed/dist_fleet/: ci_fleet_run.sh  dist_base_fleet.py  dist_fleet_ctr.py  dist_fleet_infer.py  dist_fleet_pslib.py  dist_fleet_resnet.py  dist_fleet_vgg.py  run.sh  run_ce.sh  test_dist_fleet_ctr.py  test_dist_fleet_infer.py  test_dist_fleet_resnet.py  test_dist_fleet_save_persistables.py  test_dist_fleet_vgg.py
distributed/dist_fleet/image_classfication/paddlecloud/: before_hook.sh  config.ini
framework_api/: cts_tools.py  mnist.py  test_compatible_saveload.py  test_cuda_profiler.py  test_dataloader.py  test_dy_layer_cpu.py  test_dy_learningrate_cpu.py  test_dygraph_saveload.py  test_jit.py  test_layer_control_flow_case.py  test_layer_control_flow_cond.py  test_nn.py  test_significant_bugfix.py  test_static_backward.py  test_static_dataset.py  test_static_executor.py  test_static_fluid.py  test_static_io.py  test_static_layer_controlflow.py  test_static_metrics.py  test_static_name_scope.py  test_static_nets.py  test_static_optimizer.py  test_static_paramattr.py  test_static_profiler.py  test_static_regularizer.py  test_static_tensor.py  test_static_trigonometric.py  test_static_unique_name.py  test_static_weightnorm.py  tools.py
inference/: README.md
inference/inference_api_test/: build_py37_paddle.sh  init_env.sh  run_inference_case.sh
inference/inference_api_test/cpp_api_test/: build.sh  jetson-build.sh  jetson_build.sh  run_cpp.sh
inference/inference_api_test/cpp_api_test/src/: CMakeLists.txt  bert_test_helper.h  new_api_config.h  test_bert.cc  test_clas_model.cc  test_disable_trt.cc  test_helper.h  test_multi_thread.cc  test_ocr.cc  test_rcnn_model.cc  test_resnet50.cc  test_solo_model.cc  test_text_classification.cc  test_yolo_model.cc
inference/inference_api_test/cpp_api_test/src/external-cmake/: gtest-cpp.cmake
inference/inference_api_test/python_api_test/: go.sh  requirements.txt  run-jetson.sh  run_case.sh  test.sh  test_resnet_fluid.py
inference/inference_benchmark/Paddle/: README.md  compile.sh  run_cpu_benchmark.sh  run_gpu_benchmark.sh  run_trt_benchmark.sh
inference/inference_benchmark/PyTorch/: compile.sh
inference/inference_benchmark/PyTorch/src/: CMakeLists.txt  torch_helper.h
inference/inference_benchmark/cc/Paddle/src/: CMakeLists.txt  clas_benchmark.cc  demo_helper.h  detection_benchmark.cc  eval_clas.cc  new_rcnn_benchmark.cc  ptblm_benchmark.cc  rcnn_benchmark.cc  yolo_benchmark.cc
inference/inference_benchmark/cc/TensorFlow/src/: CMakeLists.txt  clas_benchmark.cc  tf_helper.h
inference/inference_benchmark/cc/TensorFlow/src/external-cmake/: glog.cmake
inference/inference_perf_demo/: infer_perf_demo.cc  infer_perf_demo.py
inference/inference_test_utils/: README.md  benchmark_analysis.py  benchmark_backend.py  check_deadlink.py  check_spell.py  ci_status_analysis.py  default_template.html  fullchain_analysis.py  fullchain_benchmark.py  fullchain_log.py  generate_html.py  py_fullchain_analysis.py  py_post_data.py  requirements.txt  start_fullchain_benchmark.py
inference/inference_test_utils/binary_search_pr/: README.md  binary_search_pr.py  run.sh
models/args/: 1  1.sh  README  commit.py  commit.sh  models.py  run.sh  run_args.py  run_args_dygraph.py  run_test
models/args/conf/: README  args_batch.conf
models/args/log/: README
op/op-test/: web_main.py
op/op-test/meta/: abs.json  argmax.json  argmin.json  cast.json  clip.json  concat.json  cos.json  elementwise_add.json  elementwise_div.json  elementwise_max.json  elementwise_min.json  elementwise_mul.json  elementwise_sub.json  equal.json  exp.json  expand.json  fill_constant.json  flatten.json  floor.json  leaky_relu.json  log.json  logical_and.json  logical_not.json  logical_or.json  ones.json  pow.json  reduce_max.json  reduce_mean.json  reduce_min.json  reduce_sum.json  relu.json  relu6.json  reverse.json  round.json  scale.json  shape.json  sigmoid.json  sin.json  softplus.json  softsign.json  (+7 more)
op/op-test/script/: ce_function.py  ce_performance.py  ce_tf_performance.py  command_abnormal.sh  command_build.sh  command_function.sh  command_function_from_model.sh  command_performance.sh  command_performance_from_model.sh  command_tf_performance.sh  command_tf_performance_from_model.sh  convert_case.py  fetch_param.py  generate_case.py  insert_tf_performance.sh  run_abnormal.sh  run_build.sh  run_function.sh  run_function_from_model.sh  run_performance.sh  run_performance_from_model.sh  run_tf_performance.sh  run_tf_performance_from_model.sh  send_email.sh
op/op-test/views/: ce_page.html  main.html
test/tools/: start.sh  tool-api.py
test/tools/tool-check-availability-of-installation/: service.py  tool.py
test/tools/tool-test-cpu-train/: service.py  tool.py
test/tools/tool-test-dl-algorithm-correctness/: service.py  test_deeplabv3.py  test_lac.py  test_pcpvt_base.py  test_ppyolo.py  test_ppyolov2.py  test_solov2.py  test_swin_transformer.py  test_tnt_small.py
test/tools/tool-test-dl-algorithm-performance/: clas_benchmark.py  service.py  test_helper.py
test/tools/tool-test-dl-net/: service.py
test/tools/tool-test-gpu-train/: service.py
test/tools/tool-test-inference/: service.py  test_bert.py  test_ernie.py  test_resnet50.py
test/tools/tool-test-op-correctness/: service.py
test/tools/tool-test-save-load/: service.py  tool.py
test/tools/tool-test-train-performance/: analysis.py  service.py
test/tools/tool-test-train-resource/: run_tools9.sh  service.py
tipc/: .report.py.swp  .tipc.sh.swp  EmailTemplate.py  auto_debug.py  check_loss.py  check_loss.sh  checkout_result.sh  debug.sh  distribution.sh  get_pdc_job_log.py  get_pdc_job_result.py  mail.py  mail_report.py  model_list.py  pdc.sh  prepare.sh  report.py  run.sh  send_email.py  ss.sh  tipc.sh  tipc_cpp.sh  tipc_model.sh  tipc_run.sh  tipc_run_cpp.sh  tipc_run_model.sh  update_icafe.py  upload.sh  upload_log.sh  upload_model.sh  upload_paddlewhl.sh  writedb.py
tipc/configs/: chain_map  model.yaml
(+457 files in other folders)
